# enhanced-digital-pali-dictionary

./: .editorconfig  .gitignore  Cargo.toml  Pali_English_Dictionary_10_rows-full.csv  README.md
edpdgen/: Cargo.toml
edpdgen/src/: args.rs  logger.rs  main.rs
edpdgen_lib/: Cargo.toml
edpdgen_lib/src/: glib.rs  inflection_generator.rs  lib.rs
edpdgen_lib/src/ajdict/: mod.rs
edpdgen_lib/src/ajdict/input_parsers/: dpd.rs  mod.rs
edpdgen_lib/src/ajdict/output_generators/: mod.rs
edpdgen_lib/src/input/: dpd.rs  dps.rs  input_format.rs  mod.rs
edpdgen_lib/src/input_parsers/: dpd.rs  dps.rs  dps_sample.csv  mod.rs
edpdgen_lib/src/output/: mod.rs  output_format.rs
edpdgen_lib/src/output_generators/: mod.rs
edpdgen_lib/src/snapshots/: edpdgen_lib__tests__toc_summary_tests___0.snap  edpdgen_lib__tests__toc_summary_tests___1.snap  edpdgen_lib__tests__toc_summary_tests___10.snap  edpdgen_lib__tests__toc_summary_tests___11.snap  edpdgen_lib__tests__toc_summary_tests___12.snap  edpdgen_lib__tests__toc_summary_tests___2.snap  edpdgen_lib__tests__toc_summary_tests___3.snap  edpdgen_lib__tests__toc_summary_tests___4.snap  edpdgen_lib__tests__toc_summary_tests___5.snap  edpdgen_lib__tests__toc_summary_tests___6.snap  edpdgen_lib__tests__toc_summary_tests___7.snap  edpdgen_lib__tests__toc_summary_tests___8.snap  edpdgen_lib__tests__toc_summary_tests___9.snap  edpdgen_lib__tests__word_data_tests___0.snap  edpdgen_lib__tests__word_data_tests___1.snap  edpdgen_lib__tests__word_data_tests___10.snap  edpdgen_lib__tests__word_data_tests___11.snap  edpdgen_lib__tests__word_data_tests___12.snap  edpdgen_lib__tests__word_data_tests___2.snap  edpdgen_lib__tests__word_data_tests___3.snap  edpdgen_lib__tests__word_data_tests___4.snap  edpdgen_lib__tests__word_data_tests___5.snap  edpdgen_lib__tests__word_data_tests___6.snap  edpdgen_lib__tests__word_data_tests___7.snap  edpdgen_lib__tests__word_data_tests___8.snap  edpdgen_lib__tests__word_data_tests___9.snap
edpdgen_lib/src/stardict/: mod.rs
edpdgen_lib/src/templates/: word_data.html
(+229 files in other folders)
