[package]
name = "edpdgen"
version = "0.1.0"
authors = ["Digital Pāli Tools <digitalpalitools@gmail.com>"]
edition = "2018"
description = "Enhanced Digital Pāli Dictionary Generator CLI."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edpdgen_lib = { path = '../edpdgen_lib' }
colored = "2"
chrono = "0.4"

[dev-dependencies]
proptest = "0.10.1"
test-case = "1.1.0"
insta = "1.7.0"
