[package]
name = "edpdgen"
version = "1.0.0"
authors = ["Digital Pāli Tools <digitalpalitools@gmail.com>"]
edition = "2018"
description = "Enhanced Digital Pāli Dictionary Generator CLI."
license = "CC BY-NC-SA 4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edpdgen_lib = { path = '../edpdgen_lib' }
pls_core_extras = { git = "https://github.com/digitalpalitools/pali-language-services" }
colored = "2"
chrono = "0.4"
clap = "2.33.3"
regex = "1.4.4"

[dev-dependencies]
proptest = "0.10.1"
test-case = "1.1.0"
insta = "1.7.0"
