[package]
name = "edpdgen_lib"
version = "0.1.0"
authors = ["Digital Pāli Tools <digitalpalitools@gmail.com>"]
edition = "2018"
description = "Enhanced Digital Pāli Dictionary Generator Library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
lazy_static = "1.4.0"
csv = "1.1"
regex = "1.4.4"
serde = "1"
serde_derive = "1"
itertools = "0.10.0"
chrono = "0.4"
pls_core = { git = "https://github.com/digitalpalitools/pali-language-services" }
pls_core_extras = { git = "https://github.com/digitalpalitools/pali-language-services" }
serde_json = "1.0.63"

[dependencies.tera]
version = "1.6.1"
default-features = false

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]

[dev-dependencies]
proptest = "0.10.1"
test-case = "1.1.0"
insta = "1.7.0"
